--- a/swc-wasm-sdx/src/components/iframe.module.css
+++ b/swc-wasm-sdx/src/components/iframe.module.css
@@ -2,6 +2,6 @@
   width: 100%;
   min-height: 2.5rem;
   border: none;
-  background: #fff;
-  margin-top: 0.5rem;
+  background: var(--color-bg);
+  margin-top: var(--space-sm);
 }
